# solar-physics-augmentation

./: .gitignore  CLAUDE.md  Dockerfile  EXPERIMENTS.md  README.md  TECHNICAL.md  project_plan_thermal_solar.md  pyproject.toml  sweep_results.csv  verify_deltas.csv  verify_perclass.csv  verify_preds.csv  verify_seeds.csv  verify_summary.csv
api/: app.py
augmentation/: heat_equation.py  heat_equation_v2.py  perturb.py  refiner.py
configs/: augmented.yaml  augmented_15ep.yaml  baseline.yaml
docs/: AUGMENTATION_ROADMAP.md  findings.tex  make_figs.py  ref.bib
notebooks/: 01_eda.ipynb  02_error_analysis.ipynb  03_augmentation_demo.ipynb
tests/: test_dataset.py  test_heat_equation.py
training/: dataset.py  diagnose_domain_gap.py  evaluate.py  infer.py  model.py  sweep_backbones.py  train.py  verify_seeds.py
