[project]
name = "solar-thermal-cv"
version = "0.1.0"
description = "Physics-informed defect detection on thermal IR images of solar modules"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "wandb>=0.27.0",
]
